# QLK-Qross

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
api/: package.json  tsconfig.json
core/consensus/: Cargo.toml
core/consensus/src/: database.rs  error.rs  lib.rs  metrics.rs  pbft.rs  types.rs  validator.rs  voting.rs
core/liquidity-management/: Cargo.toml
core/liquidity-management/src/: amm_core.rs  arbitrage_detection.rs  bonding_curves.rs  cross_chain_bridge.rs  error.rs  lib.rs  liquidity_pools.rs  metrics.rs  price_oracle.rs  risk_management.rs  types.rs  yield_optimization.rs
core/p2p-network/: Cargo.toml
core/p2p-network/src/: bandwidth.rs  discovery.rs  error.rs  gossip.rs  gossip_optimization.rs  lib.rs  metrics.rs  network.rs  network_security.rs  relay.rs  routing.rs  security.rs  topology.rs  transport.rs  types.rs
core/performance-optimization/: Cargo.toml
core/performance-optimization/src/: adaptive_algorithms.rs  batch_processing.rs  cost_modeling.rs  distributed_cache.rs  error.rs  fee_optimization.rs  gas_prediction.rs  lib.rs  observability.rs  optimization_metrics.rs  performance_monitoring.rs  priority_management.rs  types.rs
core/proof-aggregation/: Cargo.toml
core/proof-aggregation/src/: aggregator.rs  batch.rs  coordination.rs  dependency.rs  error.rs  finality.rs  lib.rs  metrics.rs  types.rs
core/prover-infrastructure/: Cargo.toml
core/prover-infrastructure/src/: error.rs  gpu.rs  kubernetes.rs  lib.rs  metrics.rs  orchestrator.rs  prover.rs  resources.rs  scheduler.rs  types.rs  workload.rs
core/security-risk-management/: Cargo.toml
core/security-risk-management/src/: emergency_mechanisms.rs  error.rs  formal_verification.rs  lib.rs  multi_sig_governance.rs  security_monitoring.rs  threshold_signatures.rs  types.rs
core/slashing/: Cargo.toml
core/slashing/src/: engine.rs  error.rs  evidence.rs  lib.rs  metrics.rs  penalties.rs  redistribution.rs  types.rs
core/state-reader/: Cargo.toml
core/state-reader/src/: error.rs  lib.rs  types.rs
core/state-reader/src/connectors/: cosmos.rs  ethereum.rs  mod.rs  substrate.rs
core/trusted-setup/: Cargo.toml
core/trusted-setup/src/: beacon.rs  ceremony.rs  coordinator.rs  error.rs  lib.rs  metrics.rs  parameters.rs  restart.rs  types.rs  verification.rs
core/validator/: Cargo.toml
core/validator/src/: error.rs  lib.rs  metrics.rs  performance.rs  reputation.rs  selection.rs  types.rs
core/zk-circuits/: Cargo.toml
core/zk-circuits/src/: circuits.rs  error.rs  lib.rs  merkle.rs  metrics.rs  polynomial.rs  recursive.rs  types.rs  utils.rs
infrastructure/docker/: Dockerfile.api  Dockerfile.ml  Dockerfile.networking  Dockerfile.validator
infrastructure/kubernetes/: namespace.yaml  validator-deployment.yaml
ml/: requirements.txt
networking/: go.mod
networking/p2p/: Cargo.toml
networking/p2p/src/: discovery.rs  lib.rs  message.rs  network.rs  peer.rs
