[package]
name = "qross-p2p-network"
version = "0.1.0"
edition = "2021"
description = "Quantlink Qross P2P Network Stack with libp2p and QUIC"
license = "BSD-3-Clause"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Internal dependencies
qross-consensus = { path = "../consensus" }
qross-validator = { path = "../validator" }
qross-proof-aggregation = { path = "../proof-aggregation" }
qross-prover-infrastructure = { path = "../prover-infrastructure" }

# Async runtime
async-trait = "0.1"
futures = "0.3"

# P2P networking with libp2p
libp2p = { version = "0.53", features = [
    "quic",
    "tcp",
    "dns",
    "mdns",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "autonat",
    "relay",
    "dcutr",
    "upnp",
    "metrics",
    "macros"
]}

# QUIC protocol implementation
quinn = "0.10"
rustls = "0.21"

# Cryptographic operations
blake3 = { workspace = true }
ring = { workspace = true }
ed25519-dalek = "2.0"

# Distributed coordination
dashmap = "5.5"
crossbeam = "0.8"

# Networking utilities
socket2 = "0.5"
trust-dns-resolver = "0.23"

# Metrics
prometheus = { workspace = true }

# Serialization
bincode = "1.3"
postcard = "1.0"

# Graph algorithms for routing
petgraph = "0.6"

# Consistent hashing
consistent-hash = "0.1"

# Rate limiting
governor = "0.6"

# Connection pooling
deadpool = "0.10"

# Configuration
config = "0.14"

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Bloom filter and hashing
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "network_benchmarks"
harness = false

[[bench]]
name = "routing_benchmarks"
harness = false
