[package]
name = "qross-performance-optimization"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# Mathematical and numerical computation
rust_decimal = { version = "1.0", features = ["serde"] }
nalgebra = "0.32"
statrs = "0.16"

# Async and concurrency
futures = "0.3"
async-trait = "0.1"

# Data structures and algorithms
priority-queue = "1.3"
lru = "0.12"
dashmap = "5.5"

# Machine learning and prediction
candle-core = "0.3"
candle-nn = "0.3"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"

# Internal dependencies
qross-consensus = { path = "../consensus-aggregation" }
qross-zk-verification = { path = "../zk-verification" }
qross-p2p-network = { path = "../p2p-network" }
qross-liquidity-management = { path = "../liquidity-management" }
qross-security-risk-management = { path = "../security-risk-management" }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "fee_optimization_benchmarks"
harness = false

[features]
default = ["ml-prediction", "advanced-analytics"]
ml-prediction = []
advanced-analytics = []
gpu-acceleration = []
