[package]
name = "qross-prover-infrastructure"
version = "0.1.0"
edition = "2021"
description = "Quantlink Qross Distributed Prover Infrastructure"
license = "BSD-3-Clause"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Internal dependencies
qross-zk-circuits = { path = "../zk-circuits" }
qross-proof-aggregation = { path = "../proof-aggregation" }
qross-validator = { path = "../validator" }
qross-consensus = { path = "../consensus" }

# Async runtime
async-trait = "0.1"
futures = "0.3"

# Distributed coordination
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.8"

# Networking
tonic = { workspace = true }
prost = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Kubernetes integration
kube = "0.87"
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# GPU acceleration
cudarc = { version = "0.10", optional = true }
wgpu = "0.18"

# Memory management
memmap2 = "0.9"
jemallocator = "0.5"

# Mathematical operations
num-bigint = "0.4"
num-traits = "0.2"
ark-ff = "0.4"
ark-poly = "0.4"

# Cryptographic operations
blake3 = { workspace = true }
ring = { workspace = true }

# Configuration
config = "0.14"

# Resource monitoring
sysinfo = "0.30"
procfs = "0.16"

# Load balancing
consistent-hash = "0.1"

# Serialization
bincode = "1.3"

[features]
default = ["gpu-acceleration"]
gpu-acceleration = ["cudarc"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "prover_benchmarks"
harness = false

[[bench]]
name = "workload_distribution_benchmarks"
harness = false
