[package]
name = "qross-security-risk-management"
version = "0.1.0"
edition = "2021"
authors = ["Quantlink Team <dev@quantlink.com>"]
description = "Security and risk management layer for Quantlink Qross cross-chain platform"
license = "MIT"
repository = "https://github.com/quantlink/qross"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Cryptographic dependencies
bls12_381 = "0.8"
group = "0.13"
ff = "0.13"
pairing = "0.23"
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.0"
curve25519-dalek = "4.0"
ed25519-dalek = "2.0"

# Threshold cryptography
threshold_crypto = "0.4"
secret_sharing = "0.2"
shamir = "0.1"

# Zero-knowledge proofs
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"

# Networking and async
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"

# Decimal arithmetic
rust_decimal = { version = "1.0", features = ["serde-float"] }

# Internal dependencies
qross-consensus = { path = "../consensus-aggregation" }
qross-zk-verification = { path = "../zk-verification" }
qross-p2p-network = { path = "../mesh-network" }
qross-liquidity-management = { path = "../liquidity-management" }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "threshold_signatures"
harness = false

[[bench]]
name = "key_generation"
harness = false

[features]
default = ["std"]
std = []
no_std = []
testing = []
