[package]
name = "qross-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
rust_decimal = { version = "1.32", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Local dependencies
qross-consensus = { path = "../../core/consensus" }

[dev-dependencies]
tokio-test = "0.4"
